--- a/www/.htaccess
+++ b/www/.htaccess
@@ -3,5 +3,9 @@ Options FollowSymLinks
 RewriteBase /gnovi/www
 
 RewriteEngine on
+
+RewriteRule ^registrieren$ register.php [L]
+RewriteRule ^einloggen$ login.php [L]
+
 RewriteCond %{REQUEST_URI} !\.php$
 RewriteRule ^(.*)$ $1.php
