--- a/www/.htaccess
+++ b/www/.htaccess
@@ -4,5 +4,9 @@ RewriteBase /gnovi/www
 
 RewriteEngine on
 
-RewriteRule ^([^/]+)$ pages/$1.php
 RewriteRule ^$ pages/index.php
+RewriteRule ^einloggen$ pages/login.php
+RewriteRule ^registrieren$ pages/register.php
+RewriteRule ^profil$ pages/profile.php
+
+RewriteRule ^([^/]+)$ pages/$1.php
