change index page

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -4,7 +4,7 @@ RewriteBase /gnovi/www
 
 RewriteEngine on
 
-RewriteRule ^$ pages/index.php
+RewriteRule ^$ pages/start.php
 RewriteRule ^einloggen$ pages/login.php
 RewriteRule ^registrieren$ pages/register.php
 RewriteRule ^profil$ pages/profile.php
