database and other things

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -6,6 +6,7 @@ RewriteEngine on
 
 RewriteRule ^$ pages/start.php
 RewriteRule ^einloggen$ pages/login.php
+RewriteRule ^ausloggen$ pages/logout.php
 RewriteRule ^registrieren$ pages/register.php
 RewriteRule ^profil$ pages/profile.php
 
