links, new css reset

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -9,5 +9,6 @@ RewriteRule ^einloggen$ pages/login.php
 RewriteRule ^ausloggen$ pages/logout.php
 RewriteRule ^registrieren$ pages/register.php
 RewriteRule ^profil$ pages/profile.php
+RewriteRule ^anlauf$ pages/input.php
 
 RewriteRule ^([^/]+)$ pages/$1.php
