made paths absolute

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,8 +1,9 @@
 Options FollowSymLinks
 
-RewriteBase /gnovi/www
-
 RewriteEngine on
+RewriteBase /
+
+RewriteRule ^graph$ graph/ [R,L]
 
 RewriteRule ^$ pages/start.php
 RewriteRule ^einloggen$ pages/login.php
@@ -10,6 +11,6 @@ RewriteRule ^ausloggen$ pages/logout.php
 RewriteRule ^registrieren$ pages/register.php
 RewriteRule ^profil$ pages/profile.php
 RewriteRule ^anlauf$ pages/input.php
-RewriteRule ^graph(.*)$ pages/graph.php$1
+RewriteRule ^graph/(.*)$ pages/graph.php?root=$1
 
 RewriteRule ^([^/]+)$ pages/$1.php
