--- a/www/.htaccess
+++ b/www/.htaccess
@@ -11,6 +11,9 @@ RewriteRule ^ausloggen$ pages/logout.php
 RewriteRule ^registrieren$ pages/register.php
 RewriteRule ^profil$ pages/profile.php
 RewriteRule ^anlauf$ pages/input.php
-RewriteRule ^graph/(.*)$ pages/graph.php?root=$1
+
+# This methods forbids passing a slash in encoded form (%2f) as a parameter
+# since it is forbidden in this part of the url
+RewriteRule ^graph/(.*)$ pages/graph.php?$1
 
 RewriteRule ^([^/]+)$ pages/$1.php
