--- a/www/.htaccess
+++ b/www/.htaccess
@@ -13,6 +13,6 @@ RewriteRule ^ausloggen$ pages/logout.php
 RewriteRule ^registrieren$ pages/register.php
 RewriteRule ^profil$ pages/profile.php
 RewriteRule ^anlauf$ pages/input.php
-RewriteRule ^graph/(.*)$ pages/graph.php?$1
+RewriteRule ^graph/ pages/graph.php
 
 RewriteRule ^([^/]+)$ pages/$1.php
