--- a/www/.htaccess
+++ b/www/.htaccess
@@ -13,4 +13,5 @@ RewriteRule ^ausloggen$ pages/logout.php
 RewriteRule ^registrieren$ pages/register.php
 RewriteRule ^profil$ pages/profile.php
 RewriteRule ^anlauf$ pages/input.php
-RewriteRule ^graph(/.*)?$ pages/graph.php
+RewriteRule ^ich(/.*)?$ pages/personal_graph.php
+RewriteRule ^wir(/.*)?$ pages/global_graph.php
