added all links necessary and tweaked css

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -14,7 +14,11 @@ RewriteRule ^ausloggen$ pages/logout.php
 RewriteRule ^registrieren$ pages/register.php
 RewriteRule ^profil$ pages/profile.php
 RewriteRule ^anlauf$ pages/input.php
-RewriteRule ^ueber$ pages/ueber.php
+RewriteRule ^anleitung$ pages/anleitung.php
+RewriteRule ^theoretisch$ pages/theoretisch.php
+RewriteRule ^technisch$ pages/technisch.php
+RewriteRule ^links$ pages/links.php
+RewriteRule ^persoenliches$ pages/persoenliches.php
 RewriteRule ^ich(/.*)?$ pages/personal_graph.php
 RewriteRule ^wir(/.*)?$ pages/global_graph.php
 
