--- a/www/.htaccess
+++ b/www/.htaccess
@@ -21,6 +21,7 @@ RewriteRule ^links$ pages/links.php
 RewriteRule ^persoenliches$ pages/persoenliches.php
 RewriteRule ^ich(/.*)?$ pages/personal_graph.php
 RewriteRule ^wir(/.*)?$ pages/global_graph.php
+RewriteRule ^html5$ html/html5.html
 
 #giving the blog a new home
 RewriteCond %{QUERY_STRING} ^p=([0-9]*)$
