--- a/www/.htaccess
+++ b/www/.htaccess
@@ -14,11 +14,11 @@ RewriteRule ^ausloggen$ pages/logout.php
 RewriteRule ^registrieren$ pages/register.php
 RewriteRule ^profil$ pages/profile.php
 RewriteRule ^anlauf$ pages/input.php
-RewriteRule ^anleitung$ pages/anleitung.php
-RewriteRule ^theoretisch$ pages/theoretisch.php
-RewriteRule ^technisch$ pages/technisch.php
+RewriteRule ^anleitung$ pages/manual.php
+RewriteRule ^theoretisch$ pages/theory.php
+RewriteRule ^technisch$ pages/technical.php
 RewriteRule ^links$ pages/links.php
-RewriteRule ^persoenliches$ pages/persoenliches.php
+RewriteRule ^persoenliches$ pages/personal.php
 RewriteRule ^ich(/.*)?$ pages/personal_graph.php
 RewriteRule ^wir(/.*)?$ pages/global_graph.php
 RewriteRule ^html5$ html/html5.html
