--- a/www/apache.conf
+++ b/www/apache.conf
@@ -3,7 +3,7 @@ AllowEncodedSlashes On
 
 <Directory /gnovi_directory/>
     Options FollowSymLinks
-    AllowOverride FileInfo
+    AllowOverride FileInfo Indexes
 </Directory>
 
 # Make sure URIs like http://gnovi.gerade.org/graph/w%2fo work!
